--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 *.pyc
+Documentation,PPT & research paper/Documentation/Main Mini Report.pdf
+Documentation,PPT & research paper/PPT/Main Mini PPT.pdf
